# xenium-panel-validate

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: dependabot.yaml  ruleset.json
.github/workflows/: build.yml  ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  targets.rs
crates/core/: Cargo.toml  build.rs  genes.toml
crates/core/src/: gene_list.rs  lib.rs  reference_dataset.rs
crates/core/src/gene_list/: chemistry.rs  gene.rs
crates/core/src/gene_list/chemistry/: xenium_prime_human.rs  xenium_prime_mouse.rs  xenium_v1_human.rs  xenium_v1_mouse.rs
crates/core/src/gene_list/gene/: human.rs  xenium_prime_human.rs  xenium_prime_mouse.rs  xenium_v1_human.rs  xenium_v1_mouse.rs
crates/core/src/reference_dataset/: nonempty_anndata.rs  umi_counts.rs
crates/core/test-data/: SOD1_G93A_mouse_spinal_cord_P112_specimen_1_SOD1_G93A_mouse_spinal_cord_P112_specimen_1_sample_filtered_feature_bc_matrix_small.h5ad  WT_mouse_spinal_cord_P112_specimen_1_WT_mouse_spinal_cord_P112_specimen_1_sample_filtered_feature_bc_matrix.h5ad  csc_adata.h5ad  csr_adata.h5ad
crates/core/test-data/generate-test-data/: main.py  pyproject.toml
crates/gene/: Cargo.toml
crates/gene/src/: lib.rs
docs/: GOALS.md  IMPLEMENTATION_PLAN.md
foo/: main.py  pyproject.toml
scripts/dev/: push.sh
src/: gene_annotation.rs  lib.rs  main.rs  target_list.rs
