[workspace]
members = ["crates/core"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
noodles = { version = "0.111.0", features = ["gtf", "gff"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = { version = "1.1.2", default-features = false, features = ["std", "serde", "parse"] }
quote = "1.0.46"
proc-macro2 = "1.0.106"
reqwest = "0.13.4"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
syn = { version = "2.0.118", default-features = false }
heck = "0.5.0"
bstr = "1.12.1"
url = { version = "2.5.8", features = ["serde"] }
futures = { version = "0.3.32" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
