[workspace]
members = ["crates/cli","crates/core"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Ahmed Said"]
license = "MIT"
repository = "https://github.com/demhadais/xenium-panel-validate"
version = "0.3.0"
description = "A library and CLI for validating the inputs for a Xenium panel design at the SCBL at The Jackson Laboratory."
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.102"
camino = "1.2.4"
csv = "1.4.0"
noodles = { version = "0.112.0", features = ["gtf", "gff"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = { version = "1.1.2", default-features = false, features = ["std", "serde", "parse"] }
quote = "1.0.46"
proc-macro2 = "1.0.106"
reqwest = "0.13.4"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
syn = { version = "2.0.118", default-features = false }
heck = "0.5.0"
bstr = "1.12.1"
url = { version = "2.5.8", features = ["serde"] }
futures = { version = "0.3.32" }
phf_codegen = { version = "0.14.0", features = ["ptrhash"] }
phf = { version = "0.14.0", features = ["ptrhash"] }
phf_shared = { version = "0.14.0", features = ["ptrhash"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
hdf5-metno = { version = "0.12.3", features = ["static"] }
anndata = { version = "0.7.0" }
anndata-hdf5 = { version = "0.5.3" }
polars = { version = "0.53.0", default-features = false, features = ["strings"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
implicit_hasher = "allow"
