[package]
name = "xenium-panel-validate-cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "xpv"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
serde_json.workspace = true
toml.workspace = true
xenium-panel-validate.path = "../core"

[lints]
workspace = true
