[package]
name = "xenium-panel-validate-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "xpv"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
serde_json.workspace = true
toml.workspace = true
xenium-panel-validate = { path = "../core", version = "0.1.0" }

[lints]
workspace = true
