[package]
name = "xenium-panel-validate"
edition = "2024"

[dependencies]
anyhow.workspace = true
csv.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
noodles.workspace = true
serde_json.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
quote.workspace = true
proc-macro2.workspace = true
reqwest.workspace = true
tokio.workspace = true

[lints]
workspace = true
