[package]
name = "xenium-panel-validate"
edition = "2024"
version = "0.1.0"

[dependencies]
anyhow.workspace = true
csv.workspace = true
serde.workspace = true
serde_json.workspace = true
phf.workspace = true
gene = { path = "../gene" }

[build-dependencies]
gene = { path = "../gene" }
noodles.workspace = true
serde_json.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
reqwest.workspace = true
tokio.workspace = true
bstr.workspace = true
url.workspace = true
csv.workspace = true
futures.workspace = true
phf_codegen.workspace = true

[lints]
workspace = true
