[package]
name = "xenium-panel-validate"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anyhow.workspace = true
csv.workspace = true
serde.workspace = true
serde_json.workspace = true
phf.workspace = true

[build-dependencies]
noodles.workspace = true
serde_json.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
reqwest.workspace = true
tokio.workspace = true
bstr.workspace = true
url.workspace = true
csv.workspace = true
futures.workspace = true
phf_codegen.workspace = true

[lints]
workspace = true
